basic web server

--- a/static/index.html
+++ b/static/index.html
@@ -5,11 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Door</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/static/styles.css">
 </head>
 
 <body>
-  <h1>Foo</h1>
+  <a id="button"></a>
+  <script type="text/javascript" src="/static/button.js"></script>
 </body>
 
 </html>
